# tako

./: .dockerignore  .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  Dockerfile.bench  Dockerfile.bench-ntex  Dockerfile.bench-ntex.runner  Dockerfile.bench.runner  LICENSE  MIGRATION_1_TO_2.md  README.md  STABILITY.md  V2_ROADMAP.md  deny.toml  publish.sh
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
ci/autobahn/: fuzzingclient.json  run.sh
examples/auth/: Cargo.toml
examples/autobahn-echo/: Cargo.toml
examples/bench-ntex/: Cargo.toml
examples/bench-pt/: Cargo.toml
examples/bench-pt/src/: main.rs
examples/extractors-multi/: Cargo.toml
examples/file-stream/: Cargo.toml  README.md  test.txt
examples/graphql/: Cargo.toml
examples/graphql-generic-ws/: Cargo.toml
examples/graphql-generic-ws/src/: main.rs
examples/grpc-unary/: Cargo.toml
examples/health/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/hello-world-compio/: Cargo.toml
examples/hello-world-http3/: Cargo.toml
examples/http3-sse/: Cargo.toml
examples/job-queue/: Cargo.toml
examples/json-header-map/: Cargo.toml
examples/metrics-opentelemetry/: Cargo.toml
examples/multipart/: Cargo.toml
examples/openapi/: Cargo.toml
examples/openapi-utoipa/: Cargo.toml
examples/openapi-utoipa/src/: main.rs
examples/proxy-protocol/: Cargo.toml
examples/signals-advanced/: Cargo.toml
examples/signals-basic/: Cargo.toml
examples/signals-complex/: Cargo.toml
examples/signals-rpc/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: grpc_timeout_parser.rs  path_params_deserializer.rs  proxy_protocol_parser.rs
src/: body.rs  bytes.rs  client.rs  extractors.rs  file_stream.rs  graphiql.rs  graphql.rs  handler.rs  lib.rs  main.rs  middleware.rs  openapi.rs  plugins.rs  proxy_protocol.rs  redirect.rs  responder.rs  route.rs  router.rs  server.rs  server_compio.rs  server_h3.rs  server_tls.rs  server_tls_compio.rs  server_unix.rs  signals.rs  sse.rs  state.rs  static.rs  tracing.rs  types.rs  ws.rs  ws_compio.rs  zero_copy_extractors.rs
tako-core/: Cargo.toml
tako-core-local/: Cargo.toml
tako-core-local/src/: handler.rs  lib.rs  middleware.rs  route.rs  router.rs
tako-core/benches/: json_extract.rs  router_dispatch.rs
tako-core/src/: body.rs  client.rs  config.rs  conn_info.rs  extractors.rs  graphql.rs  grpc.rs  handler.rs  lib.rs  openapi.rs  problem.rs  queue.rs  redirect.rs  responder.rs  route.rs  router.rs  router_state.rs  signals.rs  state.rs  tls.rs  tracing.rs  types.rs
tako-core/src/extractors/: json.rs  params.rs  range.rs  typed_params.rs
tako-core/src/graphql/: apq.rs  limits.rs
tako-core/src/grpc/: health.rs  interceptor.rs  reflection.rs  web.rs
tako-core/src/openapi/: ui.rs  vespera.rs
tako-core/src/queue/: backend.rs  cron.rs
tako-extractors/: Cargo.toml
tako-extractors/src/: acc_lang.rs  accept.rs  basic.rs  bearer.rs  bytes.rs  connect_info.rs  content_length_limit.rs  cookie_jar.rs  cookie_key_expansion.rs  cookie_private.rs  cookie_signed.rs  extension.rs  form.rs  header_map.rs  ipaddr.rs  jwt.rs  lib.rs  matched_path.rs  multipart.rs  path.rs  protobuf.rs  query.rs  query_multi.rs  simdjson.rs  state.rs  uri_parts.rs  validate.rs
tako-extractors/src/zero_copy_extractors/: bytes.rs  form.rs  header.rs  header_map.rs  json.rs  query.rs
tako-macros/: Cargo.toml
tako-macros/src/: lib.rs
tako-plugins/: Cargo.toml
tako-plugins/src/: extractors.rs  lib.rs  middleware.rs  plugins.rs
tako-plugins/src/middleware/: access_log.rs  api_key_auth.rs  basic_auth.rs  bearer_auth.rs  body_limit.rs  circuit_breaker.rs  csrf.rs  etag.rs  healthcheck.rs  hmac_signature.rs  ip_filter.rs  json_schema.rs  jwt_auth.rs  request_id.rs  security_headers.rs  session.rs  tenant.rs  timeout.rs  traceparent.rs  upload_progress.rs
tako-plugins/src/plugins/: compression.rs  cors.rs  idempotency.rs  metrics.rs  rate_limiter.rs
tako-plugins/src/plugins/compression/: brotli_stream.rs  deflate_stream.rs  gzip_stream.rs  zstd_stream.rs
tako-plugins/src/stores/: memory.rs
tako-rs/: Cargo.toml
tako-rs-core/: Cargo.toml
tako-rs-extractors/: Cargo.toml
tako-rs-extractors/src/: acc_lang.rs  accept.rs  basic.rs  bearer.rs  bytes.rs  connect_info.rs  content_length_limit.rs  cookie_jar.rs  cookie_key_expansion.rs  cookie_private.rs  cookie_signed.rs  extension.rs  form.rs  header_map.rs  ipaddr.rs  jwt.rs  lib.rs  matched_path.rs  multipart.rs  path.rs  protobuf.rs  query.rs  query_multi.rs  simdjson.rs  state.rs  typed_header.rs  uri_parts.rs  validate.rs  zero_copy_extractors.rs
tako-rs-extractors/src/cookie_signed/: error.rs  extract.rs  jar.rs  key.rs
tako-rs-extractors/src/multipart/: error.rs  extractor.rs  field.rs  limits.rs
tako-rs-extractors/src/zero_copy_extractors/: bytes.rs  form.rs  header.rs  header_map.rs  json.rs  path.rs  query.rs
tako-rs-macros/: Cargo.toml
tako-rs-macros/src/: expand.rs  lib.rs  parse.rs
tako-rs-plugins/: Cargo.toml
tako-rs-server/: Cargo.toml
tako-rs-server-pt/: Cargo.toml
tako-rs-server-pt/src/: config.rs  lib.rs  listener.rs  shutdown.rs  worker.rs  worker_compio.rs
tako-rs-streams/: Cargo.toml
tako-rs/src/: lib.rs
tako-rs/tests/: extractors.rs  extractors_v2.rs  middleware.rs  mount_all.rs  queue.rs  queue_v2.rs  responder.rs  router.rs  server_builder.rs  simdjson_dual_backend.rs  sse_redirect_config.rs  streams_v2.rs  typed_routes.rs  udp_tcp_progress.rs
tako-server/: Cargo.toml
tako-server-pt/: Cargo.toml
tako-server-pt/src/: lib.rs
tako-server/src/: builder.rs  lib.rs  proxy_protocol.rs  server.rs  server_compio.rs  server_h2c.rs  server_h3.rs  server_tcp.rs  server_tls.rs  server_tls_compio.rs  server_udp.rs  server_unix.rs  server_vsock.rs  socket_activation.rs
tako-streams/: Cargo.toml
tako-streams/src/: file_stream.rs  sse.rs  static.rs  webtransport.rs  ws.rs  ws_compio.rs
tests/: router.rs  udp_tcp_progress.rs
website/: .gitignore  README.md  mdx-components.tsx  next.config.mjs  package.json  source.config.ts  tsconfig.json
(+361 files in other folders)
