[workspace]
members = [
  "tako-core",
  "tako-extractors",
  "tako-server",
  "tako-streams",
  "tako-plugins",
  "tako-rs",
]
exclude = [
  "examples/auth",
  "examples/extractors-multi",
  "examples/file-stream",
  "examples/graphql",
  "examples/graphql-generic-ws",
  "examples/grpc-unary",
  "examples/health",
  "examples/hello-world",
  "examples/hello-world-compio",
  "examples/hello-world-http3",
  "examples/http3-sse",
  "examples/job-queue",
  "examples/json-header-map",
  "examples/metrics-opentelemetry",
  "examples/multipart",
  "examples/openapi",
  "examples/openapi-utoipa",
  "examples/proxy-protocol",
  "examples/signals-advanced",
  "examples/signals-basic",
  "examples/signals-complex",
  "examples/signals-route",
  "examples/signals-rpc",
  "examples/stream-compression",
  "examples/streams",
  "examples/streams-compio",
  "examples/tcp-echo",
  "examples/tls-compio",
  "examples/udp-echo",
  "examples/unix-socket",
  "examples/upload-progress",
  "examples/websocket",
  "examples/websocket-compio",
  "examples/websocket-http2",
  "examples/webtransport",
  "examples/with-state",
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
