[workspace]
members = [
  "tako-core",
  "tako-extractors",
  "tako-macros",
  "tako-server",
  "tako-server-pt",
  "tako-streams",
  "tako-plugins",
  "tako-rs",
]
exclude = [
  "examples/auth",
  "examples/extractors-multi",
  "examples/file-stream",
  "examples/graphql",
  "examples/graphql-generic-ws",
  "examples/grpc-unary",
  "examples/health",
  "examples/hello-world",
  "examples/hello-world-compio",
  "examples/hello-world-http3",
  "examples/http3-sse",
  "examples/job-queue",
  "examples/json-header-map",
  "examples/metrics-opentelemetry",
  "examples/multipart",
  "examples/openapi",
  "examples/openapi-utoipa",
  "examples/proxy-protocol",
  "examples/signals-advanced",
  "examples/signals-basic",
  "examples/signals-complex",
  "examples/signals-route",
  "examples/signals-rpc",
  "examples/stream-compression",
  "examples/streams",
  "examples/streams-compio",
  "examples/tcp-echo",
  "examples/tls-compio",
  "examples/udp-echo",
  "examples/unix-socket",
  "examples/upload-progress",
  "examples/websocket",
  "examples/websocket-compio",
  "examples/websocket-http2",
  "examples/webtransport",
  "examples/with-state",
]
resolver = "2"

[workspace.package]
version = "1.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]

[workspace.dependencies]
# Internal sub-crates
tako-core = { path = "tako-core", version = "1.1.2" }
tako-extractors = { path = "tako-extractors", version = "1.1.2" }
tako-macros = { path = "tako-macros", version = "1.1.2" }
tako-plugins = { path = "tako-plugins", version = "1.1.2" }
tako-server = { path = "tako-server", version = "1.1.2" }
tako-server-pt = { path = "tako-server-pt", version = "1.1.2" }
tako-streams = { path = "tako-streams", version = "1.1.2" }

# Required dependencies
anyhow = "1.0.98"
arc-swap = "1.7"
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
cookie = { version = "0.18.1", features = ["private", "signed"] }
crc32c = "0.6"
envy = "0.4"
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
linkme = "0.3"
matchit = "0.9.1"
mime = "0.3.17"
mime_guess = "2.0.5"
once_cell = "1.21.3"
parking_lot = "0.12.5"
pin-project-lite = "0.2.16"
scc = "3.4.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_urlencoded = "0.7"
sha1 = "0.10.6"
smallvec = "1"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.29.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
tracing = "0.1.41"
url = "2.5.4"
urlencoding = "2.1.3"

# Optional / feature-gated
ahash = { version = "0.8.12", features = ["serde"] }
brotli = "8.0.1"
compio = { version = "0.18.0", features = ["macros", "rustls", "time", "fs", "net"] }
cyper-core = "0.8.0"
flate2 = "1.1.2"
h3 = "0.0.8"
h3-quinn = "0.0.10"
listenfd = "1.0"
multer = "3.1.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "http-proto"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
prometheus = "0.13.4"
prost = "0.14.1"
quinn = "0.11.9"
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
send_wrapper = "0.6"
simd-json = "0.15.1"
sonic-rs = "0.5.6"
subtle = "2.6.1"
tikv-jemallocator = "0.6.0"
tokio-rustls = "0.26.2"
tokio-vsock = "0.7"
uuid = { version = "1.17.0", features = ["v4"] }
zstd = "0.13.3"

[profile.release]
lto = "fat"
codegen-units = 1
