[workspace]
members = [
  "tako-rs-core",
  "tako-rs-extractors",
  "tako-rs-macros",
  "tako-rs-server",
  "tako-rs-server-pt",
  "tako-rs-streams",
  "tako-rs-plugins",
  "tako-rs",
]
exclude = [
  "examples/auth",
  "examples/autobahn-echo",
  "examples/extractors-multi",
  "examples/file-stream",
  "examples/graphql",
  "examples/graphql-generic-ws",
  "examples/grpc-unary",
  "examples/health",
  "examples/hello-world",
  "examples/hello-world-compio",
  "examples/hello-world-http3",
  "examples/http3-sse",
  "examples/job-queue",
  "examples/json-header-map",
  "examples/metrics-opentelemetry",
  "examples/multipart",
  "examples/openapi",
  "examples/openapi-utoipa",
  "examples/proxy-protocol",
  "examples/signals-advanced",
  "examples/signals-basic",
  "examples/signals-complex",
  "examples/signals-route",
  "examples/signals-rpc",
  "examples/stream-compression",
  "examples/streams",
  "examples/streams-compio",
  "examples/tcp-echo",
  "examples/tls-compio",
  "examples/udp-echo",
  "examples/unix-socket",
  "examples/upload-progress",
  "examples/websocket",
  "examples/websocket-compio",
  "examples/websocket-http2",
  "examples/webtransport",
  "examples/with-state",
  "fuzz",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2024"
# Track the latest stable. We rely on let-chains, async-fn-in-trait HRTB
# inference fixes (rustc#100013), and edition 2024. Bumping is non-breaking
# inside the workspace; downstream callers should track stable too.
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]

[workspace.dependencies]
# Internal sub-crates — published as `tako-rs-*` on crates.io (the
# unprefixed `tako-*` names are owned by a name-squatter at 0.0.0).
tako-rs-core = { path = "tako-rs-core", version = "2.0.0" }
tako-rs-extractors = { path = "tako-rs-extractors", version = "2.0.0" }
tako-rs-macros = { path = "tako-rs-macros", version = "2.0.0" }
tako-rs-plugins = { path = "tako-rs-plugins", version = "2.0.0" }
tako-rs-server = { path = "tako-rs-server", version = "2.0.0" }
tako-rs-server-pt = { path = "tako-rs-server-pt", version = "2.0.0" }
tako-rs-streams = { path = "tako-rs-streams", version = "2.0.0" }

# Required dependencies
anyhow = "1.0.98"
arc-swap = "1.7"
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
cookie = { version = "0.18.1", features = ["private", "signed"] }
crc32c = "0.6"
envy = "0.4"
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
linkme = "0.3.36"
matchit = "0.9.1"
mime = "0.3.17"
mime_guess = "2.0.5"
once_cell = "1.21.3"
parking_lot = "0.12.5"
pin-project-lite = "0.2.16"
scc = "3.4.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_urlencoded = "0.7"
serde_html_form = "0.2.8"
sha1 = "0.10.6"
smallvec = "1.15.1"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.29.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
tracing = "0.1.41"
url = "2.5.4"
urlencoding = "2.1.3"

# Optional / feature-gated
ahash = { version = "0.8.12", features = ["serde"] }
brotli = "8.0.1"
cron = "0.15.0"
headers = "0.4.1"
compio = { version = "0.18.0", features = ["macros", "rustls", "time", "fs", "net"] }
cyper-core = "0.8.0"
flate2 = "1.1.2"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hkdf = "0.12.4"
hmac = "0.12.1"
httpdate = "1.0.3"
ipnet = "2.11.0"
listenfd = "1.0.2"
multer = "3.1.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "http-proto"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
prometheus = "0.13.4"
jsonschema = { version = "0.30", default-features = false }
prost = "0.14.1"
quinn = "0.11.9"
sha2 = "0.10.9"
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
send_wrapper = "0.6.0"
simd-json = "0.15.1"
sonic-rs = "0.5.6"
subtle = "2.6.1"
tikv-jemallocator = "0.6.0"
tokio-rustls = "0.26.2"
validator = { version = "0.20.0", features = ["derive"] }
garde = { version = "0.22.1", features = ["derive"] }
tokio-vsock = "0.7.2"
uuid = { version = "1.17.0", features = ["v4"] }
webpki-roots = "1.0.1"
rustls-native-certs = "0.8"
zstd = "0.13.3"

# Bench-only
criterion = { version = "0.7.0", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Allowed pedantic lints (with rationale).
# Each entry documents why the lint is not actionable in this codebase.

# `as` casts in size/index/metric paths are intentional and bounded by domain
# constraints (header lengths, body sizes, counter widths). Replacing them with
# `try_into().unwrap()` only adds noise — the precondition is enforced upstream.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

# Protocol handlers, state machines, and connection loops are inherently long.
# Splitting them into helpers usually obscures the control flow.
too_many_lines = "allow"

# Many extractor / responder / protocol APIs intentionally take owned values to
# move ownership into the response future or store in extensions. Borrowing
# would force a clone at the call site, which is worse.
needless_pass_by_value = "allow"

# `request` vs `requests`, `service` vs `services`, etc. — pluralization in
# protocol code is meaningful; renaming them to disambiguate hurts readability.
similar_names = "allow"

# `Config.config_field` and similar redundancies are semantic — the struct
# name is dropped in usage but the field name carries the disambiguation.
struct_field_names = "allow"

# gRPC / protocol error variants and HTTP status branches are deliberately
# separate even when their bodies match — collapsing them loses semantic intent.
match_same_arms = "allow"

# Trait-conformance `async fn`s sometimes have synchronous bodies for one
# impl while another impl genuinely awaits. The lint fires on the sync one.
unused_async = "allow"

# `Trivially copy pass by ref` is sometimes intentional for API consistency
# across closures and trait methods that share a signature.
trivially_copy_pass_by_ref = "allow"

# `OnceLock` is used widely in the codebase as the canonical lazy static.
# `LazyLock` is functionally equivalent — pick one and don't churn the diff.
non_std_lazy_statics = "allow"

# `Duration::from_millis(60_000)` vs `Duration::from_secs(60)` — both are
# fine; the lint fires on legitimate sub-second multi-millis values too.
duration_suboptimal_units = "allow"

# `format!("{}", x)` is occasionally used to force the Display impl in
# explicit contexts. The inlined form (`format!("{x}")`) loses that signal.
# (Most are auto-fixed; this allow keeps the remaining intentional ones.)
format_push_string = "allow"

# `#[must_use]` on every `pub fn` returning a value adds attribute noise to a
# builder-heavy framework where the vast majority of returns are obviously
# meant to be assigned. The genuinely-must-use cases (Result, JoinHandle,
# Status) are flagged by other lints or upstream `#[must_use]` on the type.
must_use_candidate = "allow"

# Builder methods returning `Self` for fluent chains are pervasive in the
# router / response / middleware APIs. Mechanically annotating each with
# `#[must_use]` is noise without changing real misuse incidence.
return_self_not_must_use = "allow"

# The framework's error model is uniform: nearly every fallible `pub fn`
# returns `BoxError` / `io::Error` / a crate-local error enum whose variants
# are documented on the type. Adding boilerplate `# Errors` sections per
# function ("returns an error if the underlying operation fails") restates
# the type signature without improving clarity. Where the failure mode is
# non-obvious, document it inline next to the operation.
missing_errors_doc = "allow"

# `# Panics` sections are appropriate when a function panics on caller-
# supplied input. Where panics only occur on internal invariant violation
# (e.g. unreachable `.expect("just inserted")` after an explicit insert),
# the panic message itself carries the rationale; a separate `# Panics`
# doc section would duplicate it.
missing_panics_doc = "allow"
