[package]
name = "tako-core-local"
version = "1.1.2"
edition = "2024"
description = "Internal !Send / thread-per-core core for tako-rs (not published)."
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]
publish = false

[lib]
name = "tako_core_local"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-core = { path = "../tako-core" }

futures-util = "0.3.31"
http = "1.3.1"
matchit = "0.9.1"
smallvec = "1"
