[package]
name = "tako-core-local"
description = "Internal !Send / thread-per-core core for tako-rs (not published)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "tako_core_local"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-core.workspace = true

futures-util.workspace = true
http.workspace = true
matchit.workspace = true
smallvec.workspace = true
