[package]
name = "tako-extractors"
version = "1.1.2"
edition = "2024"
description = "Internal extractor implementations for tako-rs (not published)."
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]
publish = false

[lib]
name = "tako_extractors"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-core = { path = "../tako-core" }

anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
cookie = { version = "0.18.1", features = ["private", "signed"] }
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
mime = "0.3.17"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0.140"
serde_bytes = "0.11.17"
sha1 = "0.10.6"
smallvec = "1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"
urlencoding = "2.1.3"
once_cell = "1.21.3"
parking_lot = "0.12.5"

# Optional / feature-gated
ahash = { version = "0.8.12", features = ["serde"], optional = true }
multer = { version = "3.1.0", optional = true }
prost = { version = "0.14.1", optional = true }
simd-json = { version = "0.15.1", optional = true }
sonic-rs = { version = "0.5.6", optional = true }
uuid = { version = "1.17.0", optional = true, features = ["v4"] }

[target.'cfg(target_os = "freebsd")'.dependencies]
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"], optional = true }

[target.'cfg(not(target_os = "freebsd"))'.dependencies]
jwt-simple = { version = "0.12.12", optional = true }

[features]
default = []
ahash = ["dep:ahash", "tako-core/ahash"]
multipart = ["dep:multer", "dep:uuid"]
protobuf = ["dep:prost"]
simd = ["dep:simd-json", "dep:sonic-rs"]
jwt-simple = ["dep:jwt-simple"]
zero-copy-extractors = []
