[package]
name = "tako-macros"
description = "Internal proc macros for tako-rs. Use the `tako-rs` umbrella crate instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/tako-macros"
homepage = "https://github.com/rust-dd/tako"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
