[package]
name = "tako-plugins"
version = "1.1.2"
edition = "2024"
description = "Internal plugin and concrete-middleware implementations for tako-rs (not published)."
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]
publish = false

[lib]
name = "tako_plugins"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-core = { path = "../tako-core" }
tako-extractors = { path = "../tako-extractors" }

anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
cookie = { version = "0.18.1", features = ["private", "signed"] }
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
mime = "0.3.17"
once_cell = "1.21.3"
parking_lot = "0.12.5"
pin-project-lite = "0.2.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
smallvec = "1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
url = "2.5.4"
urlencoding = "2.1.3"
scc = "3.4.8"

# Optional / feature-gated
ahash = { version = "0.8.12", features = ["serde"], optional = true }
brotli = { version = "8.0.1", optional = true }
compio = { version = "0.17.0", features = ["macros", "rustls"], optional = true }
flate2 = { version = "1.1.2", optional = true }
multer = { version = "3.1.0", optional = true }
prometheus = { version = "0.13.4", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "http-proto"], optional = true }
uuid = { version = "1.17.0", optional = true, features = ["v4"] }
zstd = { version = "0.13.3", optional = true }

[target.'cfg(target_os = "freebsd")'.dependencies]
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"], optional = true }

[target.'cfg(not(target_os = "freebsd"))'.dependencies]
jwt-simple = { version = "0.12.12", optional = true }

[features]
default = []
plugins = ["dep:brotli", "dep:flate2", "tako-core/plugins"]
multipart = ["dep:multer", "dep:uuid", "tako-extractors/multipart"]
metrics-prometheus = ["dep:prometheus", "plugins", "signals"]
metrics-opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "plugins", "signals"]
signals = ["tako-core/signals"]
ahash = ["dep:ahash", "tako-core/ahash"]
jwt-simple = ["dep:jwt-simple", "tako-extractors/jwt-simple"]
zstd = ["dep:zstd", "plugins"]
# compio is forwarded for cfg gating inside concrete plugin/middleware impls.
compio = ["dep:compio", "tako-core/compio"]
