[package]
name = "tako-rs-extractors"
description = "Internal extractor implementations for tako-rs. Use the `tako-rs` umbrella crate instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/tako-rs-extractors"
homepage = "https://github.com/rust-dd/tako"
readme = "../README.md"

[lib]
name = "tako_rs_extractors"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-rs-core.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
cookie.workspace = true
futures-util.workspace = true
hkdf.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
mime.workspace = true
mime_guess.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_html_form.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha1.workspace = true
sha2.workspace = true
smallvec.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true

# Optional / feature-gated
ahash = { workspace = true, optional = true }
garde = { workspace = true, optional = true }
headers = { workspace = true, optional = true }
multer = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
simd-json = { workspace = true, optional = true }
sonic-rs = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
validator = { workspace = true, optional = true }

[features]
default = []
ahash = ["dep:ahash", "tako-rs-core/ahash"]
multipart = ["dep:multer", "dep:uuid"]
protobuf = ["dep:prost"]
# Meta-feature enabling both SIMD JSON backends. Prefer the split features
# below when you only need one backend.
simd = ["simd-sonic", "simd-json-impl"]
# `sonic-rs` only — used by `SonicJson<T>` and tako-core's `Json<T>` fast path.
simd-sonic = ["dep:sonic-rs", "tako-rs-core/simd-sonic"]
# `simd-json` only — used by `SimdJson<T>`.
simd-json-impl = ["dep:simd-json", "tako-rs-core/simd-json-impl"]
zero-copy-extractors = []
typed-header = ["dep:headers"]
validator = ["dep:validator"]
garde = ["dep:garde"]

[lints]
workspace = true
