[package]
name = "tako-rs-server-pt"
description = "Internal thread-per-core server bootstrap for tako-rs. Use the `tako-rs` umbrella crate instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/tako-rs-server-pt"
homepage = "https://github.com/rust-dd/tako"
readme = "../README.md"

[lib]
name = "tako_rs_server_pt"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-rs-core.workspace = true

futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true

socket2 = { version = "0.5", features = ["all"] }

# Optional CPU pinning
core_affinity = { version = "0.8", optional = true }

# Optional compio runtime (io_uring on Linux, IOCP on Windows, kqueue on macOS).
compio = { workspace = true, optional = true }
cyper-core = { workspace = true, optional = true }
send_wrapper = { workspace = true, optional = true }

[features]
default = ["affinity"]
affinity = ["dep:core_affinity"]
signals = ["tako-rs-core/signals"]
# The compio crate is enabled directly here without flipping `tako-core/compio`,
# because that core feature globally switches signals/queue to compio spawn,
# which conflicts with the existing tokio-based `tako_server::serve` path.
compio = ["dep:compio", "dep:cyper-core", "dep:send_wrapper"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
